--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@ p.footer a:hover {
 					<ul>
 						<li>
 							海外永久地址
-							<a href="https://52caopp.top/" target="_blank"><i>52caopp.com</i></a>
+							<a href="https://52caopp.top/" target="_blank"><i>52caopp.top</i></a>
 					       </li>
 						
 						<li>
